Finished DataGrid, added DropdownCheckList

--- a/WebComponentsApp/Components/MyAside/MyAside.html
+++ b/WebComponentsApp/Components/MyAside/MyAside.html
@@ -7,7 +7,7 @@
 			<li @click="this.loadComponent('html-page', 'main', 'about')">About</li>
 			<li @click="this.loadComponent('my-counter', 'main', 'counter')">Counter</li>
 			<li @click="this.loadComponent('person-form', 'main', 'input')">Person Form</li>
-			<li @click="this.loadComponent('data-grid', 'main', 'data')">Data Grid</li>
+			<li @click="this.loadComponent('transaction-data-grid', 'main', 'data')">Data Grid</li>
 		</ul>
 	</aside>
 </template>
