--- a/WebComponentsApp/Components/MyCounter/MyCounter.html
+++ b/WebComponentsApp/Components/MyCounter/MyCounter.html
@@ -9,5 +9,8 @@
 
 		<p>Current count 2: <strong>{{count}}</strong></p>
 
+		<h1>Drop-Down Check List</h1>
+		<dropdown-checklist></dropdown-checklist>
+
 	</div>
 </template>
