--- a/WebComponentsApp/Components/MyHeader/MyHeader.html
+++ b/WebComponentsApp/Components/MyHeader/MyHeader.html
@@ -1,6 +1,8 @@
 ﻿<template>
 	<header>
-		<div id="div1">This is the header (Web Component)</div>
+		<div id="div1">This is the header</div>
+		<div class="text-blue5" id="div1">This is the header (css class='text-blue5')</div>
+		<div class="wc-text-blue5" id="div1">This is the header (css class='wc-text-blue5')</div>
 		<div id="div2">Page title 1 is '[[title]]'</div>
 		<div id="div3">my-cust-attrib is '[[my-cust-attrib]]'</div>
 		<div id="div4">Page title 2 is '[[title]]'</div>
