--- a/WebComponentsApp/Components/PersonForm/PersonForm.html
+++ b/WebComponentsApp/Components/PersonForm/PersonForm.html
@@ -1,7 +1,7 @@
 ﻿<template>
 	<form>
-		<label>Forename</label><input type="text" name="forename"><br>
-		<label>Surname</label><input type="text" name="surname"><br>
+		<label for="forename">Forename</label><input type="text" name="forename"><br>
+		<label for="surname">Surname</label><input type="text" name="surname"><br>
 		<label>DOB</label><input type="date" name="dob"><br>
 		<label>Age</label><input type="number" name="age"><br>
 
