--- a/WebComponentsApp/wwwroot/Components/BaseInputForm/BaseInputForm.css
+++ b/WebComponentsApp/wwwroot/Components/BaseInputForm/BaseInputForm.css
@@ -1,14 +1,18 @@
 ﻿.grid-container {
+	color: green;
 	display: grid;
-	grid-template-columns: 1fr 3fr;
+	grid-template-columns: 1fr 2fr;
+	grid-gap: 10px;
 }
 
-form {
+/*form {
 	display: grid;
 	grid-template-columns: 1fr 3fr;
 	grid-gap: 16px;
 }
+*/
 
+/*
 label {
 	grid-column: 1 / 2;
 }
@@ -16,3 +20,4 @@ label {
 input, button {
 	grid-column: 2 / 2;
 }
+*/
